Fix Render monitoring metrics: timestamps, memory percent, alert resolution